backends/drm: set the correct content transform for shadow buffer

BUG: 476931